--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "faker": "^4.1.0",
     "jsonwebtoken": "^9.0.1",
     "method-override": "^3.0.0",
     "mysql2": "^3.5.2",
@@ -23,5 +24,8 @@
     "passport-local": "^1.0.0",
     "sequelize": "^6.32.1",
     "sequelize-cli": "^6.6.1"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.0.2"
   }
 }
