--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "sequelize": "^6.32.1",
-    "sequelize-cli": "^6.6.1"
+    "sequelize-cli": "^6.6.1",
+    "validator": "^13.11.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2"
