--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "method-override": "^3.0.0",
     "mysql2": "^3.5.2",
     "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "sequelize": "^6.32.1",
