--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "faker": "^4.1.0",
     "jsonwebtoken": "^9.0.1",
+    "libphonenumber-js": "^1.10.39",
     "method-override": "^3.0.0",
     "mysql2": "^3.5.2",
     "passport": "^0.6.0",
