--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "faker": "^4.1.0",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.1",
     "libphonenumber-js": "^1.10.39",
     "method-override": "^3.0.0",
