--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "faker": "^4.1.0",
+    "imgur": "^1.0.2",
+    "install": "^0.13.0",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.1",
     "libphonenumber-js": "^1.10.39",
     "method-override": "^3.0.0",
+    "multer": "^1.4.3",
     "mysql2": "^3.5.2",
+    "npm": "^9.8.1",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-jwt": "^4.0.1",
