--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "passport-facebook": "^3.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "percent-change": "^1.0.1",
     "sequelize": "^6.32.1",
     "sequelize-cli": "^6.6.1",
     "validator": "^13.11.0",
